# bitrateviewer

./: README.md  generator-manifest.json
src/: Makefile.am  configure.ac  setup.py  setup_translate.py
src/bitrateviewer/: Makefile.am
src/bitrateviewer/bitratecalc/: Makefile.am
