AC_INIT([bitrateviewer], [0.0.1])
AM_INIT_AUTOMAKE([foreign subdir-objects])

TUXBOX_APPS_DIRECTORY

PKG_PROG_PKG_CONFIG

AC_PROG_CC
AC_PROG_CXX
LT_INIT

AM_PATH_PYTHON
AC_PYTHON_DEVEL

PKG_CHECK_MODULES([ENIGMA2], [enigma2])

AC_CONFIG_FILES([
Makefile
bitrateviewer/Makefile
bitrateviewer/bitratecalc/Makefile
])

AC_OUTPUT
